// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can paste a valid url and add it to topic 1`] = `
.emotion-53 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-51 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-7 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-5 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-5:hover,
.emotion-5:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:disabled,
.emotion-5:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-5:focus {
  outline-width: medium;
}

.emotion-2 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-49 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-44 {
  width: 100%;
}

.emotion-44 > * {
  width: 100%;
}

.emotion-44 form {
  background-color: white;
}

.emotion-11 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11:first-of-type {
  margin-top: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-9:focus-within {
  border-color: #20588f;
}

.emotion-9 input,
.emotion-9 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 input:focus,
.emotion-9 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-9 input {
  padding: 6.5px 13px;
}

.emotion-9 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-9 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-47 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-47:hover,
.emotion-47:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-47[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-47:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-47:hover,
.emotion-47:active,
.emotion-47:disabled,
.emotion-47:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-47:focus {
  outline-width: medium;
}

.emotion-47,
.emotion-47:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

.emotion-21 {
  padding: 13px;
  border: 1px solid #ddd;
  background-color: white;
  width: 100%;
  height: 150px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 {
  text-align: center;
  margin-right: 13px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  max-width: 180px;
}

.emotion-13 img {
  max-height: 100%;
}

.emotion-13 svg {
  margin: 32.5px;
  width: 60px;
  height: 60px;
}

.emotion-19 {
  -webkit-flex: 2 4 auto;
  -ms-flex: 2 4 auto;
  flex: 2 4 auto;
  overflow: hidden;
}

.emotion-15 {
  margin: 0;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.8;
  color: #444;
}

.emotion-17 {
  font-size: 0.8rem;
  margin: 0;
}

.emotion-42 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1000;
  overflow-x: auto;
}

@media (max-width:48em) {
  .emotion-42 {
    top: 64px;
    overflow-y: auto;
    white-space: normal;
    z-index: 26;
  }
}

@media (max-width:29.75em) {
  .emotion-42 {
    top: 43px;
  }
}

.emotion-40 {
  overflow-x: auto;
  background-color: white;
  margin: 52px auto 52px;
  padding: 1em 2em 3em;
  max-width: 400px;
  border-radius: 5px;
  border-radius: 0;
  min-height: 210px;
  max-width: 620px;
  padding-bottom: 26px;
  background-color: #d1372e;
  color: white;
}

.emotion-26 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  float: right;
  height: 44px;
  width: 44px;
  margin-top: -5px;
  margin-right: -20px;
}

.emotion-26:hover,
.emotion-26:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-26[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-26:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-26:hover,
.emotion-26:active,
.emotion-26:disabled,
.emotion-26:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-26:focus {
  outline-width: medium;
}

.emotion-23 {
  float: right;
  height: 24px;
  width: 24px;
  margin-right: 7px;
  color: #777777;
  background-color: #d1372e;
  color: white;
}

.emotion-38 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
}

.emotion-36 {
  height: 100%;
  padding-top: 26px;
  font-size: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-28 {
  width: 27px;
  height: 27px;
  margin-right: 13px;
}

.emotion-30 {
  width: 100%;
  display: inline-block;
  text-align: left;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  margin-top: 13px;
}

<div
  class="emotion-53 emotion-54"
>
  <div
    aria-hidden="true"
    class="emotion-0 emotion-1"
  />
  <div
    class="emotion-51 emotion-52"
  >
    <div
      class="emotion-7 emotion-8"
    >
      Søk etter ressurs
      <button
        class="emotion-4 emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="c-icon emotion-2 emotion-3"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-49 emotion-50"
    >
      <div
        class="emotion-44 emotion-45"
      >
        <div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value="https://beta.ndla.no/subject:3/topic:1:179373/topic:1:170165/resource:1:168388/"
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-21 emotion-22"
          data-testid="articlePreview"
        >
          <div
            class="emotion-13 emotion-14"
          >
            <img
              alt=""
              src="/placeholder.png"
            />
          </div>
          <div
            class="emotion-19 emotion-20"
          >
            <h1
              class="emotion-15 emotion-16"
            >
              Hva kan du om geologiske prosesser?
            </h1>
            <p
              class="emotion-17 emotion-18"
            />
          </div>
        </div>
        <div
          class="emotion-42 emotion-43"
        >
          <div
            class="emotion-40 emotion-41"
          >
            <button
              class="emotion-25 emotion-26 emotion-6"
              data-testid="closeAlert"
              type="button"
            >
              <svg
                class="c-icon emotion-23 emotion-24"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                severity="danger"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                </g>
              </svg>
            </button>
            <div
              class="emotion-38 emotion-39"
            >
              <div
                class="emotion-36 emotion-37"
              >
                <div
                  class="emotion-32 emotion-33"
                >
                  <svg
                    class="c-icon emotion-28 emotion-29"
                    data-license="Apache License 2.0"
                    data-source="Material Design"
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g>
                      <path
                        d="M0 0h24v24H0V0z"
                        fill="none"
                      />
                      <path
                        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </g>
                  </svg>
                  <span
                    class="emotion-30 emotion-31"
                  >
                    Obs! Denne ressursen er en annen type urn:resourcetype:tasksAndActivities
                  </span>
                </div>
                <div
                  class="emotion-34 emotion-35"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-46 emotion-47 emotion-6"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 1`] = `
.emotion-102 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-100 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-7 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-5 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-5:hover,
.emotion-5:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:disabled,
.emotion-5:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-5:focus {
  outline-width: medium;
}

.emotion-2 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-98 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-93 {
  width: 100%;
}

.emotion-93 > * {
  width: 100%;
}

.emotion-93 form {
  background-color: white;
}

.emotion-11 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11:first-of-type {
  margin-top: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-9:focus-within {
  border-color: #20588f;
}

.emotion-9 input,
.emotion-9 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 input:focus,
.emotion-9 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-9 input {
  padding: 6.5px 13px;
}

.emotion-9 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-9 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 20px 0;
}

.emotion-91 {
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  background: #fff;
  border-radius: 4px;
  box-shadow: 0 0 19px rgba(0,0,0,0.2);
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  width: 100%;
}

.emotion-79 {
  overflow-y: scroll;
  -webkit-animation-duration: 200ms;
  animation-duration: 200ms;
  -webkit-animation-name: fadeInLeft;
  animation-name: fadeInLeft;
  border-top: 1px solid #f8f8f8;
  max-height: 500px;
}

.emotion-89 {
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
  color: #757575;
  padding: 13px;
  border-top: 1px solid #f8f8f8;
}

.emotion-96 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-96:hover,
.emotion-96:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-96[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-96:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-96:hover,
.emotion-96:active,
.emotion-96:disabled,
.emotion-96:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-96:focus {
  outline-width: medium;
}

.emotion-96,
.emotion-96:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

.emotion-87 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 1em;
}

.emotion-81 {
  display: inline;
  background: transparent;
  border: 0;
  border-top: 3px solid #e6e6e6;
  padding: 1em 1.45em;
  margin: 1em 0.3em 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  color: #20588f;
  cursor: pointer;
  border-top: 3px solid #20588f;
  background-color: 'rgba(222,235,246,0.5)';
}

.emotion-81:hover {
  border-top: 3px solid #20588f;
  background-color: 'rgba(222,235,246,0.5)';
}

.emotion-82 {
  display: inline;
  background: transparent;
  border: 0;
  border-top: 3px solid #e6e6e6;
  padding: 1em 1.45em;
  margin: 1em 0.3em 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  color: #20588f;
  cursor: pointer;
}

.emotion-82:hover {
  border-top: 3px solid #20588f;
  background-color: 'rgba(222,235,246,0.5)';
}

.emotion-23 {
  border: 0;
  border-bottom: 1px solid #f8f8f8;
  padding: 13px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  -webkit-transition: background 200ms ease;
  transition: background 200ms ease;
  background: transparent;
}

.emotion-23:focus,
.emotion-23:hover {
  background: #deebf6;
}

.emotion-21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-right: 13px;
  -webkit-box-flex: 3;
  -webkit-flex-grow: 3;
  -ms-flex-positive: 3;
  flex-grow: 3;
}

.emotion-19 {
  font-size: 18;
  font-size: 1rem;
  line-height: 1.1;
  font-weight: 600;
  color: #444;
  text-align: left;
}

<div
  class="emotion-102 emotion-103"
>
  <div
    aria-hidden="true"
    class="emotion-0 emotion-1"
  />
  <div
    class="emotion-100 emotion-101"
  >
    <div
      class="emotion-7 emotion-8"
    >
      Søk etter ressurs
      <button
        class="emotion-4 emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="c-icon emotion-2 emotion-3"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-98 emotion-99"
    >
      <div
        class="emotion-93 emotion-94"
      >
        <div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-13 emotion-14"
        >
          Eller
        </div>
        <div
          aria-expanded="true"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          aria-owns="downshift-0-menu"
          role="combobox"
        >
          <div>
            <div
              class="emotion-11 emotion-12"
            >
              <div
                class="emotion-9 emotion-10"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-0-menu"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
          <div
            aria-labelledby="downshift-0-label"
            class="emotion-91 emotion-92"
            data-testid="dropdown-items"
            id="downshift-0-menu"
            role="listbox"
          >
            <div
              class="emotion-79 emotion-80"
            >
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-0"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om geologiske prosesser?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-1"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om petroleumsgeologi?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-2"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om olje og gass på den norske sokkelen?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-3"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om letemetoder og datainnsamling?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-4"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om installasjoner for boring og vedlikehold?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-5"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om installasjoner for produksjon?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-6"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Sammendrag om rørhåndtering
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-7"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om slamsystemet?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-8"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om sementeringsutstyret?
                  </span>
                  
                </div>
              </button>
              <button
                aria-selected="false"
                class="emotion-23 emotion-24"
                id="downshift-0-item-9"
                role="option"
                type="button"
              >
                <div
                  class="emotion-21 emotion-22"
                >
                  <span
                    class="emotion-19 emotion-20"
                  >
                    Hva kan du om stigerørsystemet?
                  </span>
                  
                </div>
              </button>
            </div>
            <div
              class="emotion-87 emotion-88"
            >
              <span
                class="emotion-81"
              >
                1
              </span>
              <button
                class="emotion-82"
              >
                2
              </button>
              <button
                class="emotion-82"
              >
                3
              </button>
              <button
                class="emotion-82"
              >
                4
              </button>
              <button
                class="emotion-82"
              >
                5
              </button>
              <button
                class="emotion-82"
              >
                 
                &gt;
                 
              </button>
            </div>
            <div
              class="emotion-89 emotion-90"
            >
              Søket gav 180 treff
            </div>
          </div>
        </div>
      </div>
      <button
        class="emotion-95 emotion-96 emotion-6"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;

exports[`Can select a resource from the list and it adds it to topic 2`] = `
.emotion-38 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-36 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-7 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-5 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-5:hover,
.emotion-5:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-5[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-5:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-5:hover,
.emotion-5:active,
.emotion-5:disabled,
.emotion-5:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-5:focus {
  outline-width: medium;
}

.emotion-2 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-34 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-29 {
  width: 100%;
}

.emotion-29 > * {
  width: 100%;
}

.emotion-29 form {
  background-color: white;
}

.emotion-11 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-11:first-of-type {
  margin-top: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-9:focus-within {
  border-color: #20588f;
}

.emotion-9 input,
.emotion-9 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 input:focus,
.emotion-9 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-9 input {
  padding: 6.5px 13px;
}

.emotion-9 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-9 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 20px 0;
}

.emotion-32 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-32:hover,
.emotion-32:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-32[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-32:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-32:hover,
.emotion-32:active,
.emotion-32:disabled,
.emotion-32:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-32:focus {
  outline-width: medium;
}

.emotion-32,
.emotion-32:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

.emotion-27 {
  padding: 13px;
  border: 1px solid #ddd;
  background-color: white;
  width: 100%;
  height: 150px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-19 {
  text-align: center;
  margin-right: 13px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  max-width: 180px;
}

.emotion-19 img {
  max-height: 100%;
}

.emotion-19 svg {
  margin: 32.5px;
  width: 60px;
  height: 60px;
}

.emotion-25 {
  -webkit-flex: 2 4 auto;
  -ms-flex: 2 4 auto;
  flex: 2 4 auto;
  overflow: hidden;
}

.emotion-21 {
  margin: 0;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.8;
  color: #444;
}

.emotion-23 {
  font-size: 0.8rem;
  margin: 0;
}

<div
  class="emotion-38 emotion-39"
>
  <div
    aria-hidden="true"
    class="emotion-0 emotion-1"
  />
  <div
    class="emotion-36 emotion-37"
  >
    <div
      class="emotion-7 emotion-8"
    >
      Søk etter ressurs
      <button
        class="emotion-4 emotion-5 emotion-6"
        type="button"
      >
        <svg
          class="c-icon emotion-2 emotion-3"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-34 emotion-35"
    >
      <div
        class="emotion-29 emotion-30"
      >
        <div>
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <input
                data-testid="addResourceUrlInput"
                placeholder="Lim inn lenke fra ndla.no"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="emotion-13 emotion-14"
        >
          Eller
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
        >
          <div>
            <div
              class="emotion-11 emotion-12"
            >
              <div
                class="emotion-9 emotion-10"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value="Hva kan du om geologiske prosesser?"
                />
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-27 emotion-28"
          data-testid="articlePreview"
        >
          <div
            class="emotion-19 emotion-20"
          >
            <img
              alt=""
              src="/placeholder.png"
            />
          </div>
          <div
            class="emotion-25 emotion-26"
          >
            <h1
              class="emotion-21 emotion-22"
            >
              Hva kan du om geologiske prosesser?
            </h1>
            <p
              class="emotion-23 emotion-24"
            />
          </div>
        </div>
      </div>
      <button
        class="emotion-31 emotion-32 emotion-6"
        data-testid="taxonomyLightboxButton"
        type="button"
      >
        Lagre
      </button>
    </div>
  </div>
</div>
`;
